--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,106 @@
-theme: jekyll-theme-minimal
-title: あなたのサイトタイトル
-description: サイトの説明文をここに書きます
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: "puyokura's tech blog"
+description: >-
+  技術的な知見や備忘録を公開するブログ。
+url: "https://puyokura.github.io"
+baseurl: ""
+repository: "puyokura/puyokura.github.io"
+locale: "ja-JP" # サイトの言語を日本語に設定
+
+# Build settings
+theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
+# Plugins
+plugins:
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
+
+# Site Author
+author:
+  name: "puyokura"
+  avatar: "/assets/images/bio-photo.jpg" # ご自身の画像へのパスに変更してください
+  bio: "Software Engineer"
+  location: "Tokyo, Japan"
+  links:
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/puyokura"
+
+# Site Footer
+footer:
+  links:
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/puyokura"
+
+# Defaults
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+      mathjax: true # 数式表示を有効化
+  # _pages
+  - scope:
+      path: "**/pages/*"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
+# Pagination
+paginate: 5
+paginate_path: /page:num/
+
+# Search
+search: true
+
+# Analytics
+analytics:
+  provider: false # "google-gtag"
+  google:
+    tracking_id: ""
+    anonymize_ip: false
+
+# Comments
+comments:
+  provider: "disqus" # Disqusを有効化
+  disqus:
+    shortname: "your-disqus-shortname" # ご自身のDisqus shortnameに変更してください
+
+# Navigation
+masthead_nav:
+  - title: "記事一覧"
+    url: /_posts/
+  - title: "カテゴリ"
+    url: /categories/
+  - title: "タグ"
+    url: /tags/
+  - title: "概要"
+    url: /about/
