fix: Use remote_theme to fix GitHub Pages build error

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ repository: "puyokura/puyokura.github.io"
 locale: "ja-JP" # サイトの言語を日本語に設定
 
 # Build settings
-theme: minimal-mistakes-jekyll
+# theme: minimal-mistakes-jekyll
+remote_theme: mmistakes/minimal-mistakes
 minimal_mistakes_skin: "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Plugins
