--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -18,6 +18,9 @@ jobs:
           ruby-version: '3.2' # or your preferred Ruby version
           bundler-cache: true
 
+      - name: Add Linux platform to Gemfile.lock
+        run: bundle lock --add-platform x86_64-linux
+
       - name: Build Jekyll Site
         run: bundle exec jekyll build
 
