--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Install dependencies
         run: |
+          rm -f Gemfile.lock
           gem install bundler
-          bundle lock --add-platform x86_64-linux
           bundle install --jobs 4 --retry 3
 
       - name: Build Jekyll Site
