--- a/_config.yml
+++ b/_config.yml
@@ -1,25 +1,11 @@
 # Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: "puyokura's tech blog"
-description: >-
-  技術的な知見や備忘録を公開するブログ。
+description: "技術的な知見や備忘録を公開するブログ。"
 url: "https://puyokura.github.io"
 baseurl: ""
 repository: "puyokura/puyokura.github.io"
-locale: "ja-JP" # サイトの言語を日本語に設定
+locale: "ja-JP"
 
 # Permalinks
 permalink: /:categories/:year/:month/:day/:title/
@@ -28,13 +14,13 @@ permalink: /:categories/:year/:month/:day/:title/
 plugins:
   - jekyll-feed
 
+# Author
+author:
+  name: "puyokura"
+
 # Markdown Processing
 kramdown:
   input: GFM
   syntax_highlighter: rouge
   syntax_highlighter_opts:
     css_class: 'highlight'
-
-# Author
-author:
-  name: "puyokura"
